--- a/.github/workflows/build-n1.yml
+++ b/.github/workflows/build-n1.yml
@@ -115,7 +115,7 @@ jobs:
         
     - name: 加载源,patch补丁和自定义设置
       run: |
-        if [ ${{matrix.target}} == "Lede_phicomm_n1" -o ${{matrix.target}} == "Project_phicomm_n1" -o ${{matrix.target}} == "QHome_n1" -o ${{matrix.target}} == "phicomm_n1" ];then
+        if [ ${{matrix.target}} == "QHome_n1" -o ${{matrix.target}} == "phicomm_n1" ];then
           svn co https://github.com/281677160/N1/trunk reform
         fi
         cp -Rf `find ./ -maxdepth 1 -type d ! -path './openwrt' ! -path './'` openwrt
